# agent-observability

./: .gitignore  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
src/agent_observability/: agent.py  app.py  main.py  trace.py
